# cherenkov-qa

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci-template.yml  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .release-please-config.json  5_QA_REPORT.md  =3.10.4  AGENTS.md  ALIGNMENT_FINDINGS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.mcp  HANDOVER.md  LICENSE  Makefile  PROJECT_REVIEW.md  QUICKSTART_PETSTORE.md  README.md  RELEASE_NOTES.md  RUN_ORDER.md  SECURITY.md  __check_all_issues.py  __check_edits.py  action.yml  backend_test.err  branches-report.txt  check_issues.py  cherenkov-circleci-orb.yml  cherenkov-launcher.spec  cherenkov-mcp.yaml  cherenkov-policy.json  cherenkov.py  cherenkov_validate.py  docker-compose.ai.yml  (+88 more)
.1/: 404.html  index.html  sitemap.xml
.1/changelog/: index.html
.1/contributing/: index.html
.1/getting-started/: index.html
.agents/: BRIEFING.md  handoff.md
.agents/accessibility_qa/: BRIEFING.md  progress.md  report.md
.agents/automation_qa/: report.md
.agents/implementer_1/: handoff.md
.agents/orchestrator/: BRIEFING.md  progress.md
.cursor/: mcp.json
.githooks/: pre-push
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.openinterpreter/: mcp.json
.qwen/: arena.yml  subagent-per-spec.md
1.0/: 404.html  index.html  sitemap.xml
agent_memory/: dashboard-states.md  endpoints.md  findings_2026-06-09_repo_alignment.md  index.md  known-bugs.md  qwen-code-alignment.md  snyk-findings.md  test-patterns.md  validation-gate.md
bench/: eval-baseline.json
benchmarks/: qwen-code-vs-cherenkov.py
cherenkov/: __init__.py  __main__.py
cherenkov-backstage-plugin/: README.md  package.json  tsconfig.json
ci/: gitlab-ci-template.yml
desktop/: Dockerfile
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: file_watcher.rs  hardware.rs  main.rs  settings.rs  setup_wizard.rs  updater.rs  wizard.rs
dev/: 404.html  index.html  sitemap.xml
docs/: AGENT_HANDOVER_2026-06-17.md  AGENT_HANDOVER_2026-06-18.md  AGENT_HANDOVER_2026-06-18b.md  ARCHITECTURE_MAP.md  ASSUMPTIONS.md  BRAND_STRATEGY.md  CLI_DEMO.md  DASHBOARD_AUDIT.md  DEFERRED_VISION_ARCHIVE.md  DEMO_SCRIPT.md  ERROR_HANDLING.md  EXECUTION_PLAN.md  FE_DASHBOARD_FULL_REGRESSION_TEST_SUITE.md  FE_DASHBOARD_PARITY_AUDIT.md  FE_DASHBOARD_REGRESSION.md  FE_QA_WORKFLOW_REQUIREMENTS.md  FE_TEST_DATA_AND_EXECUTION_GUIDE.md  FE_TEST_SUMMARY.md  FE_UX_REVAMP_SUMMARY.md  FRONTIERCODE_OSS_ALTERNATIVES.md  GAP_REPORT.md  GETTING_STARTED.md  HANDOVER.md  HANDOVER_SESSION_2026-06-18.md  HANDOVER_SESSION_2026-06-19.md  HANDOVER_TO_CLAUDE_CODE.md  INDEX.md  INTEGRATION_HANDOVER_REPORT.md  INTEGRATION_STRATEGY.md  LOGGING.md  MASTER_ROADMAP_2026-06-19.md  MIGRATION.md  MIGRATION_INVENTORY.md  MODULE_STATUS.md  NORTH_STAR.md  PARALLEL_AGENT_PLAN_2026-06-18.md  PHASE_PLAN.md  PLAYBOOK.md  PRODUCT_STRATEGY_ROADMAP.md  QA_AI_INTELLIGENCE_REPORT_2026.md  (+31 more)
docs-site/: .pymarkdown.json  RUNBOOK.md  docs-requirements.txt  mkdocs.yml
engine/: Dockerfile  main.py  requirements.txt  spec_loader.py  validator.py
grafana/: cherenkov-dashboard.json
k8s/: README.md  argo-applicationset.yaml  cherenkov-deployment.yaml  cherenkov-hpa.yaml  cherenkov-network-policy.yaml  cherenkov-pdb.yaml  cherenkov-service.yaml  crd-conformancecheck.yaml  k3d-cluster.yaml  kustomization.yaml  namespace.yaml  ollama-init-job.yaml  ollama-pvc.yaml  ollama-service.yaml  ollama-statefulset.yaml  operator-deployment.yaml  operator-rbac.yaml  petstore-configmap.yaml  prism-deployment.yaml  prism-service.yaml
notebook/: day4_green_red.sh  generate_and_score.py
npm-package/: package.json
operator/: Dockerfile  README.md  go.mod  go.sum  main.go
packaging/: build.ps1  build.sh  cherenkov.spec  launcher.py
playwright-suite/: client.ts  generated-types.ts  package-lock.json  package.json  playwright.config.ts
prompts/: accessibility_test.j2  asyncapi_test.j2  generator_system.txt  graphql_test.j2  grpc_test.j2
qa-test-project/: api.yaml
scripts/: agent_sync.py  apply-rulesets.sh  apply_branch_protection.sh  build-sidecar.sh  check_cli_docs.py  check_public_docs_clean.py  ci_docs_check.py  close_completed_issues.py  close_validation_gate.py  collect_evidence.py  fix_mocks.py  gate_check.py  gen_cli_reference.py  generate_tauri_icons.py  github_sync.sh  install-tools.sh  k3d-setup.ps1  k3d-setup.sh  k3d-test.sh  memory_sync.py  prune_branches.sh  qwen-code-integration.sh  qwen_code_sdk_demo.py  run_smoke_matrix.sh  seed_github.py  setup_oi.sh  skill_sync.py  start-agent-fabric.sh  start_dashboard_api.py  wiki_publish.sh
skills/: README.md  api-test-generation.md  eject-standalone.md  governance-certification.md  hitl-review.md  jira-exporter.md  k6-perf.md  mcp-integration.md  mena-compliance.md  ocr-review.md  open-interpreter.md  perf-baseline.md  rag-query.md  self-healing.md  snyk-remediation.md  sync-driven-dev.md  visual-diff.md  visual-regression.md
stub/: client.ts  extended_spec.json  generated-types.ts  openapi_3_1.yaml  package-lock.json  package.json  playwright.config.ts  schema.graphql  stub.proto  target_spec.json  tsconfig.json
tests/: check_guest_checkout_with_a_discount.spec.ts  conftest.py  test_creating_a_new_order_at_orders_and_expect_it_to_succeed.spec.ts  test_dast_mutation.py  test_golden_generate.py  test_golden_snapshot.py  test_hitl_auth.py  test_jira_exporter.py  test_legacy_compliance.py  test_legacy_dashboard.py  test_legacy_deep_healing.py  test_legacy_diagnostics.py  test_legacy_healing_advanced.py  test_legacy_jira.py  test_legacy_perf.py  test_legacy_rag.py  test_legacy_visual.py  test_mcp_stubs.py  test_mena_compliance.py  test_mutation_validate.py  test_openapi_3_1.py  test_otel_tracer.py  test_perf_integration.py  test_rag_index.py  test_rag_schema_index.py
tools/: qwen_code_mcp.py
vscode/: .eslintrc.json  package-lock.json  package.json
vscode-cherenkov/: package-lock.json  package.json
(+2679 files in other folders)
