[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cherenkov"
version = "1.0.0"
description = "Reality Engine for LLM-generated API tests — finds spec↔implementation divergences and catches AI test-cheating."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["api-testing", "openapi", "divergence", "llm", "playwright", "qa"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]

[project.urls]
Homepage = "https://github.com/moaidmoatasem/cherenkov-qa"
"Bug Tracker" = "https://github.com/moaidmoatasem/cherenkov-qa/issues"
Changelog = "https://github.com/moaidmoatasem/cherenkov-qa/blob/main/CHANGELOG.md"
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.0.0",
    "requests",
    "pyyaml",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "click>=8.4.1",
    "websockets",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
mobile = ["Appium-Python-Client>=3.0.0"]
bench = [
    # DeepEval adds LLM-as-judge metrics on top of the built-in static gates.
    # Install with: pip install cherenkov[bench]
    "deepeval>=0.21.0",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]
dev-bench = [
    # Full dev suite including LLM-judge metrics (requires cffi/Rust toolchain).
    # Install with: pip install cherenkov[dev-bench]
    "pytest>=7.4",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "deepeval>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cherenkov*"]

[project.scripts]
cherenkov = "cherenkov.cli.core:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
# tests/standalone holds suites invoked directly via unittest in CI
# (service/env-dependent); they are not part of pytest discovery.
norecursedirs = ["standalone", ".*", "__pycache__", "node_modules"]
