[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "cherenkov-qa"
version = "1.1.1"
description = "AI-native API conformance testing — OpenAPI spec to Playwright tests, locally, privately, with zero vendor lock-in."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
keywords = ["openapi", "api-testing", "qa", "llm", "conformance", "playwright", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "pydantic>=2.7.0,<3.0.0",
    "pydantic-settings>=2.14.2",
    "requests",
    "pyyaml",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "httpx>=0.28.1",
    "sse-starlette>=2.1.0,<4.0.0",
    "apscheduler>=3.10.0,<4.0.0",
    "click>=8.4.1",
    "websockets",
    "PyJWT>=2.8.0",
    "jsonschema>=4.0.0",
    "memsearch>=0.1.0",
    "jinja2>=3.1.6",
    "graphql-core>=3.2.0",
    "argcomplete>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/moaidmoatasem/cherenkov-qa"
Documentation = "https://moaidmoatasem.github.io/cherenkov-qa/"
Repository = "https://github.com/moaidmoatasem/cherenkov-qa"
Issues = "https://github.com/moaidmoatasem/cherenkov-qa/issues"
Changelog = "https://github.com/moaidmoatasem/cherenkov-qa/blob/main/CHANGELOG.md"

[project.optional-dependencies]
redis = ["redis>=8.0.1"]
mobile = ["Appium-Python-Client>=3.0.0"]
rag = ["numpy>=1.24.0"]
bench = [
    # DeepEval adds LLM-as-judge metrics on top of the built-in static gates.
    # Install with: pip install cherenkov[bench]
    "deepeval>=0.21.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "deepeval>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cherenkov*"]

[project.scripts]
cherenkov = "cherenkov.cli.core:main"

[tool.pytest.ini_options]
addopts = "-q --tb=short"
testpaths = ["tests"]
norecursedirs = ["standalone", ".*", "__pycache__", "node_modules"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "mobile: requires mobile device or emulator",
    "k8s: requires k3d or Kubernetes cluster",
    "e2e: end-to-end tests that depend on external services",
    "integration: integration tests requiring running services",
    "smoke: quick smoke tests",
    "ollama: requires Ollama running on localhost:11434",
]

[tool.coverage.run]
source = ["cherenkov"]
omit = ["*/tests/*", "*/__pycache__/*"]
command_line = "-m pytest"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["stub", "node_modules", ".venv", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle + pyflakes
    "I",              # isort
    "N",              # pep8-naming
    "UP",             # pyupgrade
    "B",              # flake8-bugbear
    "SIM",            # flake8-simplify
    "ARG",            # flake8-unused-arguments
    "C4",             # flake8-comprehensions
    "RET",            # flake8-return
    "T20",            # flake8-print (warn on print in non-CLI code)
    "RUF",            # Ruff-specific rules
]
ignore = ["E501", "SIM108", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T20", "ARG", "N"]
"cherenkov/cli/**" = ["T20"]
"cherenkov/stages/**" = ["T20"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false
ignore_missing_imports = true
exclude = ["build/", "dist/", "stub/", "node_modules/", "tests/standalone/"]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist", "stub", "node_modules", ".venv"]
skips = ["B101", "B303", "B311", "B404", "B603", "B607"]
