[package]
name = "cherenkov-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "cherenkov_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "cherenkov-desktop"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["shell-sidecar", "process-command-api"] }
tauri-build = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["tauri/custom-protocol"]
